# fasga

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SPECS.md  USAGE_EXAMPLES.md  check_cuda.py  debug_srt.py  docker-compose.yml  fasga-docker.sh  pyproject.toml  test_model_load.py
src/fasga/: __init__.py  aligner.py  anchor.py  audio.py  cli.py  exporter.py  preprocessor.py  segment.py  transcriber.py  utils.py
tests/: __init__.py  test_aligner.py  test_anchor.py  test_audio.py  test_cli.py  test_exporter.py  test_preprocessor.py  test_segment.py  test_transcriber.py  test_utils.py
